--- a/v2/index.css
+++ b/v2/index.css
@@ -20,12 +20,42 @@ h1, h2, h3, span{
 	color: steelblue;
 }
 
+h3{
+	margin: 10px;
+}
+
 .center-vert{
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 }
 
+#titlebox{
+	width: 100%;
+	position: absolute;
+}
+
+#titlewrap{
+	width: 900px;
+	position: relative;
+	right: 50px;
+}
+
+#logopic{
+	width: 100%;
+	height: 300px;
+	background-color: grey;
+	display: inline-block;
+}
+
+
+
 .backdrop{
 	background-color: rgba(100, 100, 255, 0.6);
+	padding: 2px;
+}
+
+.fill{
+	width: 100%;
+	height: 100%;
 }
