--- a/v2/index.css
+++ b/v2/index.css
@@ -1,61 +1,141 @@
+/*colors
+//
+// #161c32 dark blue
+// #97b1cc bright blue 151, 177, 204
+// #e4be8c accent 228, 190, 140
+// #475f76 mid blue 71, 95, 118
+// #ecf1ff white 236, 241, 255
+
+// #9BBADA
+
+*/
+
+
 body{
-	margin: 0px;
+	background-color: #ecf1ff;
 }
 
-header{
-	height: 100vh;
-	width: 100vw;
+h1, h2, h3, h4, span{
+	color: #161c32;
+	font-family: helvetica, sans-serif;
+}
+
+h2{
+	font-weight: 100;
+	letter-spacing: 14px;
+	margin: 3px;
+}
+
+
+#title{
+	width: 900px;
+	margin: 0 40px;
+}
+
+#mainbg{
+	background-image: url("img/bg.jpg");
+	background-position: center top;
+
+}
+
+.textbar{
+	padding: 1px;
+	margin: 10px 0;
+}
+
+.brightOverlay{
+	background-color: rgba(185, 212, 239, 0.8);
+}
+
+
+.button{
+	margin: 10px 15px;
+	padding: 5px 15px;
+	font-size: 20px;
+	cursor: pointer;
+}
+.button:hover{
+	background-color: rgba(236, 241, 255, 0.5);
+	color: #475f76;
+}
+
+.crop{
+	overflow: hidden;
+}
+
+
+.rel{
 	position: relative;
 }
 
-nav{
-	width: 100%;
-	height: 60px;
+.abs{
 	position: absolute;
+}
+
+.fix{
+	position: fixed;
+}
+
+.centertext{
+	text-align: center;
+}
+
+.bottom{
 	bottom: 0px;
+	right: 0px;
 	left: 0px;
 }
 
-h1, h2, h3, span{
-	color: steelblue;
+.top{
+	top: 0px;
+	right: 0px;
+	left: 0px;
 }
 
-h3{
-	margin: 10px;
+.fullscreen{
+	width: 100vw;
+	height: 100vh;
 }
 
-.center-vert{
+
+.uppercase{
+	text-transform: uppercase;
+}
+
+.flex{
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
-}
-
-#titlebox{
-	width: 100%;
-	position: absolute;
-}
-
-#titlewrap{
-	width: 900px;
-	position: relative;
-	right: 50px;
-}
-
-#logopic{
-	width: 100%;
-	height: 300px;
-	background-color: grey;
-	display: inline-block;
-}
-
-
-
-.backdrop{
-	background-color: rgba(100, 100, 255, 0.6);
-	padding: 2px;
 }
 
 .fill{
 	width: 100%;
 	height: 100%;
+}
+
+.fv{
+	flex-direction: column;
+}
+
+.fh{
+	flex-direction: row;
+}
+
+.fcenter{
+	justify-content: center;
+}
+
+.fend{
+	justify-content: flex-end;
+}
+
+.high{
+	height: 1000px;
+}
+
+.coverbg{
+	background-size: cover;
+}
+
+body{
+	margin: 0;
+	padding: 0;
 }
